--- a/src/examples/index/index.css
+++ b/src/examples/index/index.css
@@ -13,3 +13,14 @@ body,.um-win{
 .u-table tr.tr-row-hover, .u-table tr:hover{
     cursor:pointer;
 }
+.um-lang{
+   outline: none;
+   cursor: pointer;
+   border: 0;
+   border-radius: 4px;
+   background: rgba(255, 255, 255, 0.8);
+   font-size: 12px;
+   height: 18px;
+   line-height: 18px;
+   color: #666;
+}
