--- a/src/components/pc/molibox-input/index.css
+++ b/src/components/pc/molibox-input/index.css
@@ -1,6 +1,6 @@
 @import '~antd/dist/antd.css';
-.ant-input-group-wrapper,.ant-input-group-wrapper .ant-input{
-   width: 200px;
+.ant-input-group-wrapper,.ant-input{
+   width: 400px;
    height: 30px;
    margin: 20px;
 }
